force-app/main/default/objects/External_Case_Status__c/External_Case_Status__c.object-meta.xml
<CustomObject>
   <description>This object is used to capture the Case status from external systems.</description>
   <label>External Case Status</label>
   <nameField>
      <displayFormat>ECSN-{00000000}</displayFormat>
      <label>External Case Status Number</label>
      <type>AutoNumber</type>
   </nameField>
   <pluralLabel>External Case Statuses</pluralLabel>
   <sharingModel>ControlledByParent</sharingModel>
</CustomObject>