force-app/main/default/objects/External_Case_Status__c/fields/Case__c.field-meta.xml
<CustomField>
   <fullName>Case__c</fullName>
   <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
   <description>Parent Salesforce Case</description>
   <inlineHelpText>Parent Salesforce Case</inlineHelpText>
   <label>Case</label>
   <referenceTo>Case</referenceTo>
   <relationshipLabel>External Case Statuses</relationshipLabel>
   <relationshipName>External_Case_Statuses</relationshipName>
   <relationshipOrder>0</relationshipOrder>
   <type>MasterDetail</type>
</CustomField>