force-app/main/default/objects/External_Case_Status__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Stores the status to send to customer as an in-app notification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>