force-app/main/default/objects/External_Case_Status__c/fields/External_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Status of Case in external system</description>
    <inlineHelpText>Status of Case in external system</inlineHelpText>
    <label>External Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Open-InitiateGoodFaithOutbound</fullName>
            </value>
            <value>
                <fullName>Open-InitiatePreArbOutbound</fullName>
            </value>
            <value>
                <fullName>Open-InitiatePreCompOutbound</fullName>
            </value>
            <value>
                <fullName>Open-PreArbOutboundResponse</fullName>
            </value>
            <value>
                <fullName>Open-PreCompOutboundResponse</fullName>
            </value>
            <value>
                <fullName>Open-ProcessLiability</fullName>
            </value>
            <value>
                <fullName>Open-RecalledDispute</fullName>
            </value>
            <value>
                <fullName>Open-RecalledPrearbitration</fullName>
            </value>
            <value>
                <fullName>Open-ReviewArbitration</fullName>
            </value>
            <value>
                <fullName>Open-ReviewAssociatedTransaction</fullName>
            </value>
            <value>
                <fullName>Open-ReviewDisputeResponse</fullName>
            </value>
            <value>
                <fullName>Open-ReviewInboundPreComp</fullName>
            </value>
            <value>
                <fullName>Open-ReviewPreArbInbound</fullName>
            </value>
            <value>
                <fullName>Open-ReviewValidations</fullName>
            </value>
            <value>
                <fullName>Pending-AdjustAccountEntry</fullName>
            </value>
            <value>
                <fullName>Pending-AdjustCHAccount</fullName>
            </value>
            <value>
                <fullName>Pending-AncillaryQuestions</fullName>
            </value>
            <value>
                <fullName>Pending-ArbitrationInboundRuling</fullName>
            </value>
            <value>
                <fullName>Pending-ArbOutboundRuling</fullName>
            </value>
            <value>
                <fullName>Pending-AssessCHLiable</fullName>
            </value>
            <value>
                <fullName>Pending-AssessDuplicateAuth</fullName>
            </value>
            <value>
                <fullName>Pending-AssessEFT</fullName>
            </value>
            <value>
                <fullName>Pending-AssessFraud</fullName>
            </value>
            <value>
                <fullName>Pending-AssessFraudCount</fullName>
            </value>
            <value>
                <fullName>Pending-AssistIdentification</fullName>
            </value>
            <value>
                <fullName>Pending-AwaitingDocuments</fullName>
            </value>
            <value>
                <fullName>Pending-CardholderLiable</fullName>
            </value>
            <value>
                <fullName>Pending-ChargebackDocUpload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>