force-app/main/default/objects/External_Case_Status__c/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>External Status description</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>External Status description</inlineHelpText>
    <label>Internal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>