force-app/main/default/objects/External_Case_Status__c/fields/Is_Outcome_in_Customer_Favour__c.field-meta.xml
<CustomField>
    <fullName>Is_Outcome_in_Customer_Favour__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>If dispute outcome was made in favour of customer</description>
    <formula>IF(
OR(
ISPICKVAL(External_Status__c, &quot;Resolved-AcquirerLiable&quot;),
ISPICKVAL(External_Status__c, &quot;Resolved-WriteOff&quot;),
ISPICKVAL(External_Status__c, &quot;Resolved-MerchantCredit&quot;) 
),
TRUE,
FALSE
)</formula>
    <inlineHelpText>If dispute outcome was made in favour of customer</inlineHelpText>
    <label>Is Outcome in Customer Favour?</label>
    <type>Checkbox</type>
</CustomField>