force-app/main/default/objects/External_Case_Status__c/fields/MonetaryAdjustmentInformation__c.field-meta.xml
<CustomField>
    <fullName>MonetaryAdjustmentInformation__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Field to capture Adjustment from an external system when Case reaches Resolved-WriteOff.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Monetary Adjustment Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>