force-app/main/default/objects/External_Case_Status__c/fields/New_Customer_Message__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Message__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Message sent to the customer via a notification in the app</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Message sent to the customer via a notification in the app</inlineHelpText>
    <label>Customer Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>