force-app/main/default/objects/External_Case_Status__c/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Outcome code when as dispute is closed</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Outcome code when as dispute is closed</inlineHelpText>
    <label>Result Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>