force-app/main/default/objects/External_Case_Status__c/fields/Result_Message__c.field-meta.xml
<CustomField>
    <fullName>Result_Message__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Description of the outcome</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Description of the outcome</inlineHelpText>
    <label>Result Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>