force-app/main/default/objects/External_Case_Status__c/fields/Status_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Status_Event_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Unique Event ID for a status</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique Event ID for a status</inlineHelpText>
    <label>Status Event ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>