force-app/main/default/objects/External_Case_Status__c/fields/Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Status_Timestamp__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Timestamp the status was updated in external system</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Timestamp the status was updated in external system</inlineHelpText>
    <label>Status Timestamp</label>
    <type>DateTime</type>
</CustomField>