force-app/main/default/objects/External_Case_Status__c/fields/Status_Timestamp_With_Millisec_Gmt__c.field-meta.xml
<CustomField>
    <fullName>Status_Timestamp_With_Millisec_Gmt__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Text field to capture timestamp from Pega. It is always GMT time</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Status Timestamp With Millisec Gmt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>